# grader-ai

./: .gitignore  AGENTS.md  LICENSE  README.md  opencode.json  pyproject.toml
examples/: reference.tex  submission.tex
src/grader_ai/: __init__.py  __main__.py  app.py  cli.py  core.py  excel_export.py  extraction.py  grader.py  grading.py  parsing.py  web.py
